Refactor to use bundles-apt for JSON manipulation.